refactor(sfs-samples): TodoRepository Collectors.toList() → stream().toList() 현대화
Phase 1C 마감 게이트 1단계 다관점 리뷰 발견 [M-2] 반영.
Java 16+ stream().toList() 사용으로 간결해지고 반환 리스트가 unmodifiable임이
의도적으로 명확해짐. import java.util.stream.Collectors도 함께 제거.

리뷰어가 함께 언급한 TodoController는 Collectors.joining(", ")을 사용 중이라
import 유지 필요 — 본 커밋에서 제외.